ウィンドウリストの背景設定を修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ set -g status-left "#{?pane_in_mode,#[bg=yellow] COPY ,#[fg=cyan,bg=black]#{?cli
 ### ウィンドウリストの設定
 set -g status-justify centre # ウィンドウリストを中央寄せにする
 #set -g window-status-current-fg black # アクティブなウィンドウ名を色付けする
-set -g window-status-current-bg colour32 # アクティブなウィンドウの背景を塗る
+set -g window-status-current-style bg=colour32 # アクティブなウィンドウの背景を塗る
 
 ### 右パネルの設定
 set -g status-right-length 50 # 表示可能文字数
