ペインの1文字分移動を無効化

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,10 @@ unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
 ## ペインの移動をshift+上下左右で行う
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
 bind -r H resize-pane -L 5 # prefix+Hで左に5文字分移動
 bind -r J resize-pane -D 5 # prefix+Hで下に5文字分移動
 bind -r K resize-pane -U 5 # prefix+Hで上に5文字分移動
