--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,15 +12,15 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-## ペインの移動をshift+上下左右で行う
+## ペインのサイズ変更をprefix+H,J,K,Lで行う
 unbind C-Up
 unbind C-Down
 unbind C-Left
 unbind C-Right
 bind -r H resize-pane -L 5 # prefix+Hで左に5文字分移動
-bind -r J resize-pane -D 5 # prefix+Hで下に5文字分移動
-bind -r K resize-pane -U 5 # prefix+Hで上に5文字分移動
-bind -r L resize-pane -R 5 # prefix+Hで右に5文字分移動
+bind -r J resize-pane -D 5 # prefix+Jで下に5文字分移動
+bind -r K resize-pane -U 5 # prefix+Kで上に5文字分移動
+bind -r L resize-pane -R 5 # prefix+Lで右に5文字分移動
 
 ## 非アクティブペインのみ白っぽく変更
 set -g window-style bg=colour239
