ペインの移動を追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,12 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
+## ペインの移動をprefix+h,j,k,lで行う
+bind h select-pane -L # prefix+hで左のペインに移動
+bind j select-pane -D # prefix+jで下のペインに移動
+bind k select-pane -U # prefix+kで上のペインに移動
+bind l select-pane -R # prefix+lで右のペインに移動
+
 ## ペインのサイズ変更をprefix+H,J,K,Lで行う
 unbind C-Up
 unbind C-Down
