ペイン番号の表示時間を変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,9 @@ bind -r J resize-pane -D 5 # prefix+Jで下に5文字分移動
 bind -r K resize-pane -U 5 # prefix+Kで上に5文字分移動
 bind -r L resize-pane -R 5 # prefix+Lで右に5文字分移動
 
+## ペイン番号の表示時間を10秒に変更
+set display-panes-time 10000
+
 ## 非アクティブペインのみ白っぽく変更
 set -g window-style bg=colour239
 set -g window-active-style bg=colour232
