コピー先のクリップボードを指定

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,5 +63,8 @@ set -g status-right "%A, %B %d, %Y %T" # 年月日、曜日、時分秒を表示
 set-option -g history-limit 5000
 set-window-option -g mode-keys vi
 
-if-shell "test -w /dev/clipboard" "bind-key > save-buffer /dev/clipboard"
+# コピーモードのコピー先のクリップボードを指定
+if-shell "uname -a | grep Microsoft" '\
+    bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "clip.exe"; \
+    '
 
