ステータス表示位置を変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,7 @@ set -g default-terminal screen-256color
 set -g terminal-overrides xterm:colors=256
 
 ## ステータスバーの設定
+set -g status-position top
 set-option -g status-bg colour212
 set -g status-interval 1 # ステータスバーの更新を1秒毎に行う
 
