vim_setting: dein-uiを追加

--- a/vim_setting/toml/company/dein.toml
+++ b/vim_setting/toml/company/dein.toml
@@ -17,6 +17,9 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
+[[plugins]]
+repo = 'wsdjeg/dein-ui.vim'
+
 # Gitプラグイン
 [[plugins]]
 repo = 'tpope/vim-fugitive'
