--- a/vim_setting/toml/company/markdown.toml
+++ b/vim_setting/toml/company/markdown.toml
@@ -22,56 +22,18 @@
 #                                                             | on_ft = ['ft'] / on_ft = ['ft1', 'ft2']                   |
 # | on_i       | インサートモード移行時にロード (0以外で有効) | on_i = 1 / on_i = 2                                       |
 
+# Markdownプラグイン
 [[plugins]]
-repo = 'Shougo/dein.vim'
+repo = 'tpope/vim-markdown'
+on_ft = ["markdown", "pandoc.markdown", "rmd"]
 
+# Markdownプラグイン
 [[plugins]]
-repo = 'wsdjeg/dein-ui.vim'
-
-# ブラウザオープンプラグイン
-[[plugins]]
-repo = 'tyru/open-browser.vim'
-
-# Gitプラグイン
-[[plugins]]
-repo = 'tpope/vim-fugitive'
-
-# LSPプラグイン
-[[plugins]]
-repo = 'prabirshrestha/vim-lsp'
+repo = 'kannokanno/previm'
 hook_add = '''
-    let g:lsp_highlights_enabled = 0
-    let g:lsp_textprop_enabled = 0
-    let g:lsp_diagnostics_enabled = 0
+    nnoremap <silent> <Leader>p :PrevimOpen<CR>
+    let g:geprevim_enable_realtime = 1
+    let g:previm_updatetime = 100
 '''
-
-# LSPプラグイン
-[[plugins]]
-repo = 'mattn/vim-lsp-settings'
-
-# 補完プラグイン(非同期)
-[[plugins]]
-repo = 'prabirshrestha/asyncomplete.vim'
-
-# 補完プラグイン(非同期)
-[[plugins]]
-repo = 'prabirshrestha/asyncomplete-lsp.vim'
-
-# 閉じ補完プラグイン
-[[plugins]]
-repo = 'cohama/lexima.vim'
-
-# ツリー表示プラグイン
-[[plugins]]
-repo = 'scrooloose/nerdtree'
-hook_add = '''
-    nnoremap <silent> <Leader>f :NERDTreeToggle<CR>
-    nnoremap <silent> <Leader>ff :NERDTreeFocus<CR>
-    let g:NERDTreeIgnore = ['\.o$', '\.git$']
-    let g:NERDTreeShowHidden = 1
-'''
-
-# カーソル移動プラグイン
-[[plugins]]
-repo = 'easymotion/vim-easymotion'
+on_ft = ["markdown", "pandoc.markdown", "rmd"]
 
