tmux_setting: プラグインマネージャとプラグインを追加
- tpm
- tmux-resurrent

--- a/tmux_setting/.tmux.conf
+++ b/tmux_setting/.tmux.conf
@@ -71,3 +71,13 @@ if-shell "uname -a | grep Microsoft" '\
     bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "clip.exe"; \
     '
 
+# プラグインリスト
+# プラグインマネージャー
+set -g @plugin 'tmux-plugins/tpm'
+# tmux環境の保存と復元
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+
+# プラグインの実行(この行は常に一番下に記述すること)
+run '~/.tmux/plugins/tpm/tpm'
+
