vim_setting: LSPの設定を変更

--- a/vim_setting/toml/dein.toml
+++ b/vim_setting/toml/dein.toml
@@ -40,9 +40,13 @@ repo = 'tpope/vim-fugitive'
 [[plugins]]
 repo = 'prabirshrestha/vim-lsp'
 hook_add = '''
-    let g:lsp_highlights_enabled = 0
-    let g:lsp_textprop_enabled = 0
-    let g:lsp_diagnostics_enabled = 0
+    let g:lsp_text_edit_enabled = 0
+    let g:lsp_textprop_enabled = 1
+    let g:lsp_diagnostics_enabled = 1
+    let g:lsp_diagnostics_echo_cursor = 1
+    let g:lsp_document_highlight_enabled = 1
+    let g:lsp_virtual_text_enabled = 0
+
 '''
 
 # LSPプラグイン
