--- a/vim_setting/toml/markdown.toml
+++ b/vim_setting/toml/markdown.toml
@@ -22,10 +22,12 @@
 #                                                             | on_ft = ['ft'] / on_ft = ['ft1', 'ft2']                   |
 # | on_i       | インサートモード移行時にロード (0以外で有効) | on_i = 1 / on_i = 2                                       |
 
+# Markdownフォーマット
 [[plugins]]
 repo = 'tpope/vim-markdown'
 on_ft = ["markdown", "pandoc.markdown", "rmd"]
 
+# Markdownのプレビュー
 [[plugins]]
 repo = 'iamcco/markdown-preview.nvim'
 hook_add = '''
