--- a/vim_setting/toml/util.toml
+++ b/vim_setting/toml/util.toml
@@ -60,6 +60,15 @@ hook_add = '''
     map # <Plug>(visualstar-#)N
 '''
 
+# インデントレベルの可視化
+[[plugins]]
+repo = 'Yggdroot/indentLine'
+hook_add = '''
+    let g:indentLine_fileTypeExclude = ['help', 'nerdtree']
+    let g:indentLine_enabled = 1
+    let g:indentLine_color_term = 166
+'''
+
 # Google翻訳
 [[plugins]]
 repo = 'skanehira/translate.vim'
