--- a/vim_setting/toml/lsp.toml
+++ b/vim_setting/toml/lsp.toml
@@ -46,3 +46,12 @@ repo = 'prabirshrestha/asyncomplete.vim'
 # vim-lspと連携し補完データをasyncompleteに渡す
 [[plugins]]
 repo = 'prabirshrestha/asyncomplete-lsp.vim'
+
+# LSPと連携してアウトラインを表示
+[[plugins]]
+repo = 'liuchengxu/vista.vim'
+hook_add = '''
+    let g:vista_sidebar_width = 50
+    let g:vista_default_executive = 'vim_lsp'
+    nnoremap <silent> <F8> :Vista!!<CR>
+'''
