--- a/tmux_setting/.tmux.conf
+++ b/tmux_setting/.tmux.conf
@@ -57,11 +57,11 @@ set -g status-left "#{?pane_in_mode,#[bg=yellow] COPY ,#[fg=cyan,bg=black]#{?cli
 ### ウィンドウリストの設定
 set -g status-justify centre # ウィンドウリストを中央寄せにする
 #set -g window-status-current-fg black # アクティブなウィンドウ名を色付けする
-set -g window-status-current-style bg=colour32 # アクティブなウィンドウの背景を塗る
+set -g window-status-current-style fg=colour254,bg=colour32 # アクティブなウィンドウの背景を塗る
 
 ### 右パネルの設定
-set -g status-right-length 50 # 表示可能文字数
-set -g status-right "%A, %B %d, %Y %T" # week, month day, year, 時分秒を表示
+set -g status-right-length 60 # 表示可能文字数
+set -g status-right "#{pomodoro_status} %A, %B %d, %Y %T" # week, month day, year, 時分秒を表示
 
 set -g history-limit 5000
 set-window-option -g mode-keys vi
@@ -79,6 +79,12 @@ set -g utf8-emoji on
 set -g @plugin 'tmux-plugins/tpm'
 # tmux環境の保存と復元
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# tmuxのロギング
+set -g @plugin 'tmux-plugins/tmux-logging'
+# ポモドーロタイマー
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @pomodoro_granularity 'on'
+
 
 
 # プラグインの実行(この行は常に一番下に記述すること)
