change: [tmux] プラグインの記述位置を変更

--- a/tmux_setting/.tmux.conf
+++ b/tmux_setting/.tmux.conf
@@ -1,3 +1,15 @@
+# プラグインリスト
+## プラグインマネージャー
+set -g @plugin 'tmux-plugins/tpm'
+## tmux環境の保存と復元
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+## tmuxのロギング
+set -g @plugin 'tmux-plugins/tmux-logging'
+## ポモドーロタイマー
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+### 表示をmmからmm:ssに変更
+set -g @pomodoro_granularity 'on'
+
 # キーバインド関係
 ## prefixキーをCtrl+tに変更
 unbind C-b
@@ -73,18 +85,6 @@ if-shell "uname -a | grep Microsoft" '\
 
 set -g utf8-cjk on
 set -g utf8-emoji on
-
-# プラグインリスト
-# プラグインマネージャー
-set -g @plugin 'tmux-plugins/tpm'
-# tmux環境の保存と復元
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-# tmuxのロギング
-set -g @plugin 'tmux-plugins/tmux-logging'
-# ポモドーロタイマー
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @pomodoro_granularity 'on'
-
 
 
 # プラグインの実行(この行は常に一番下に記述すること)
