change: [tmux] ペインの背景指定をTerminalソフト依存に変更

--- a/tmux_setting/.tmux.conf
+++ b/tmux_setting/.tmux.conf
@@ -55,11 +55,11 @@ set -g terminal-overrides xterm:colors=256
 
 ## 非アクティブペインのみ白っぽく変更
 set -g window-style bg=colour242
-set -g window-active-style bg=colour0
+set -g window-active-style bg=terminal
 
 ## ステータスバーの設定
 set -g status-position top
-set -g status-bg colour212
+set -g status-style fg=colour0,bg=colour212
 set -g status-interval 1 # ステータスバーの更新を1秒毎に行う
 
 ### 左パネルの設定
@@ -83,8 +83,8 @@ if-shell "uname -a | grep Microsoft" '\
     bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "clip.exe"; \
     '
 
-set -g utf8-cjk on
-set -g utf8-emoji on
+# set -g utf8-cjk on
+# set -g utf8-emoji on
 
 
 # プラグインの実行(この行は常に一番下に記述すること)
