change: [vim] プラグインマネージャーをdeinからvim-jetpackに変更

--- a/conf/vim/toml/pm.toml
+++ b/conf/vim/toml/pm.toml
@@ -24,8 +24,4 @@
 
 # プラグインマネージャ
 [[plugins]]
-repo = 'Shougo/dein.vim'
-
-# プラグインアップデート補助
-[[plugins]]
-repo = 'wsdjeg/dein-ui.vim'
+repo = 'tani/vim-jetpack'
